--- a/src/component/Shopping/Shopping.css
+++ b/src/component/Shopping/Shopping.css
@@ -4,6 +4,12 @@
 }
 .product-container{
     display: grid;
-    grid-template-columns: repeat(3 ,1fr);
+    grid-template-columns: repeat(3,1fr);
     grid-gap: 45px;
+    margin: 100px 50px;
+}
+.cart-container{
+    background: rgba(255, 153, 0, 0.3);
+ 
+
 }
